--- a/css/profile.css
+++ b/css/profile.css
@@ -5,7 +5,7 @@ body{
 	background-position: 0px 0px;
 	background-repeat: repeat-x;
 	animation: animatedBackground 50s linear infinite;
-	-webkit-backface-visibility: hidden
+	-webkit-backface-visibility: hidden;
 	
 }
 
@@ -46,7 +46,7 @@ body{
 	font-family: Helvetica;
 	text-align: center;
 	text-shadow: 2px 4px 2px rgba(0,0,0, 0.3);
-	/* text-shadow: -.2px 0 black, 0 .5px black, .5px 0 black, 0 -.5px black; */
+	text-shadow: -.2px 0 gold, 0 -.5px gold, .5px 0 gold, 0 -.5px black;
 	-webkit-backface-visibility: hidden
 }
 #header-name-sub {
@@ -117,13 +117,18 @@ a {
 	top: 0;
 	left: 0;
 	overflow: hidden;
-	-webkit-backface-visibility: hidden
+	-webkit-backface-visibility: hidden;
 }
+/* #frontpage-pic-container { */
+	/* width: 370px; */
+	/* border: 1px solid black; */
+/* } */
+
 #frontpage-pic img {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 350px;
+	max-width: 300px;
 	margin-top: 0px;
 	position: center;
 	/* width: 350px; */
@@ -153,33 +158,3 @@ a {
 	-webkit-backface-visibility: hidden
 }
 
-/*===========================================================
-          BACKGROUND ANIM
-============================================================*/
-
-@keyframes animatedBackground {
-	from { background-position: 0 0; }
-	to { background-position: 100% 0; }
-}
-
-/*===========================================================
-          FRONT PIC ANIM
-============================================================*/
-
-#frontpage-pic img{
-	transition: transform 2s;
-	transform-origin: 50% 50%;
-	cursor: pointer;
-}
-#frontpage-pic:hover img {
-	transform: scale(1.152);
-}
-
-
-/* #frontpage-pic img { */
-	/* transition: transform .5s; */
-	/* transform-origin: 50% 50%; */
-/* } */
-/* #frontpage-pic:hover img { */
-	/* transform: scale(1.1); */
-/* } */
